refactor(Frames.java): 기능상 적절한 리스트 구현체 변경(ArrayList => LinkedList)